tests/misc/errors/handlebars/__snapshots__/jsfmt.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid.hbs [glimmer] format 1`] = `
"Parse error on line 2:
<A >x, {{@name}
--------------^
Expecting 'CLOSE_RAW_BLOCK', 'CLOSE', 'CLOSE_UNESCAPED', 'OPEN_SEXPR', 'CLOSE_SEXPR', 'ID', 'OPEN_BLOCK_PARAMS', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', 'SEP', got 'INVALID' (2:11)
  1 | <A >
> 2 | x, {{@name}
    |           ^
  3 |"
`;

exports[`invalid-2.hbs [glimmer] format 1`] = `
"Unclosed element \`@name\`: 

|
|  <{@name>
|

(error occurred in 'an unknown module' @ line 3 : column 0) (3:0)
  1 | <a>
  2 |
> 3 | <{@name>
    | ^^^^^^^^
  4 |"
`;

exports[`invalid-3.hbs [glimmer] format 1`] = `
"Parse error on line 3:
<a>{{}}
-----^
Expecting 'OPEN_SEXPR', 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE' (3:3)
  1 | <a>
  2 |
> 3 | {{}}
    |   ^
  4 |"
`;

exports[`tilde-comments-1.hbs [glimmer] format 1`] = `
"Parse error on line 1:
{{~}}
---^
Expecting 'OPEN_SEXPR', 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE' (1:4)
> 1 | {{~}}
    |    ^
  2 |"
`;

exports[`tilde-comments-2.hbs [glimmer] format 1`] = `
"Parse error on line 1:
{{~~}}
---^
Expecting 'OPEN_SEXPR', 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE' (1:4)
> 1 | {{~~}}
    |    ^
  2 |"
`;
